<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <!--        <module>swiftboot-demo-admin-portal</module>-->
        <module>swiftboot-demo-app-server</module>
        <module>swiftboot-demo-security</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.swiftboot</groupId>
    <artifactId>swiftboot-demo</artifactId>
    <version>3.0.0</version>
    <name>swiftboot-demo</name>
    <description>Demo project for SwiftBoot</description>

    <properties>
        <java.version>17</java.version>
        <swiftboot.version>3.0.0</swiftboot.version>
        <!--        <junit.version>5.5.2</junit.version>-->
        <mysql.version>9.2.0</mysql.version>
        <postgres.version>42.7.7</postgres.version>
        <jwt.version>0.12.6</jwt.version>
        <junit.version>5.12.1</junit.version>
        <embedded-redis.version>1.4.3</embedded-redis.version>
<!--        <springdoc.version>2.8.6</springdoc.version>-->
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.swiftech</groupId>
            <artifactId>swiftboot-service</artifactId>
            <version>${swiftboot.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.swiftech</groupId>
            <artifactId>swiftboot-web</artifactId>
            <version>${swiftboot.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.swiftech</groupId>
            <artifactId>swiftboot-apidoc</artifactId>
            <version>${swiftboot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>


<!--        <dependency>-->
<!--            <groupId>org.springdoc</groupId>-->
<!--            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
<!--            <version>${springdoc.version}</version>-->
<!--        </dependency>-->

<!--        &lt;!&ndash; This dependency is WORKAROUND for swagger since somehow it relies on old version jaxb-api, replace if possible &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>javax.xml.bind</groupId>-->
<!--            <artifactId>jaxb-api</artifactId>-->
<!--            <version>2.3.1</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>com.github.codemonstur</groupId>
            <artifactId>embedded-redis</artifactId>
            <version>${embedded-redis.version}</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${mysql.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgres.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>junit</groupId>-->
<!--            <artifactId>junit</artifactId>-->
<!--            <version>4.13.2</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->

                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter</artifactId>
                    <version>${junit.version}</version>
                    <scope>test</scope>
                </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <executable>true</executable>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>com.github.kongchen</groupId>-->
<!--                <artifactId>swagger-maven-plugin</artifactId>-->
<!--                <version>3.1.8</version>-->
<!--                <configuration>-->
<!--                    <apiSources>-->
<!--                        <apiSource>-->
<!--                            <springmvc>true</springmvc>-->
<!--                            <locations>-->
<!--                                <location>org.swiftboot.demo</location>-->
<!--                            </locations>-->
<!--                            <schemes>-->
<!--                                <schema>http</schema>-->
<!--                            </schemes>-->
<!--                            <host>localhost</host>-->
<!--                            <basePath>/${project.name}</basePath>-->
<!--                            <info>-->
<!--                                <title>${project.name}接口</title>-->
<!--                                <version>V${project.version}</version>-->
<!--                                <description>${project.name}</description>-->
<!--                            </info>-->
<!--                            &lt;!&ndash;<templatePath>${basedir}/src/main/swagger/template/strapdown.html.hbs</templatePath>&ndash;&gt;-->
<!--                            &lt;!&ndash;<outputPath>${basedir}/src/main/swagger/api-doc.html</outputPath>&ndash;&gt;-->
<!--                            <swaggerDirectory>${project.basedir}/docs/api</swaggerDirectory>-->
<!--                            <outputFormats>json</outputFormats>-->
<!--                            <securityDefinitions>-->
<!--                                <securityDefinition>-->
<!--                                    <name>MybasicAuth</name>-->
<!--                                    <type>basic</type>-->
<!--                                </securityDefinition>-->
<!--                            </securityDefinitions>-->
<!--                        </apiSource>-->
<!--                    </apiSources>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <phase>compile</phase>-->
<!--                        <goals>-->
<!--                            <goal>generate</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>

</project>
